--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -1,17 +1,22 @@
+<!--
+  Generated template for the MapPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
+
   <ion-navbar>
     <ion-title>
-      Contact
-    </ion-title>
+      <span>map</span>
+      <button class="refresher" side="right" [@rotation]="state" (click)="map.doRefresh(state); doRefresh(state)">
+          <ion-icon name="refresh" color="light"></ion-icon>
+      </button>
+    </ion-title>    
   </ion-navbar>
+
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+<ion-content>  
+    <app-map #map [mapConfig]="mapConfig"></app-map>
 </ion-content>
