--- a/src/pages/task-detail/task-detail.html
+++ b/src/pages/task-detail/task-detail.html
@@ -289,7 +289,8 @@
                   [taskLocations]="taskLocations"
                   [taskStatus]="task.status"
                   [taskType]="task.type"
-                  [runId]="task.runId">
+                  [runId]="task.runId"
+                  [runStartAt]="task.startAt">
                 </app-map>
               </div>
             </ion-col>
